base/07-svc-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: web
    port: 80
    targetPort: 9000
