base/09-ingress-metrics.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik-metrics.minikube`) || PathPrefix(`/metrics`)
      services:
        - name: prometheus@internal
          kind: TraefikService
